// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`meta-alarm-rule-patterns-form Renders \`meta-alarm-rule-patterns-form\` with custom props 1`] = `
<c-patterns-field-stub
  alarm-attributes="[object Object],[object Object],[object Object]"
  alarm-excluded-attributes="v.last_update_date,v.last_event_date"
  disabled="true"
  name="config"
  value="[object Object]"
  with-alarm="with-alarm"
  with-entity="with-entity"
  with-event="with-event"
/>
`;

exports[`meta-alarm-rule-patterns-form Renders \`meta-alarm-rule-patterns-form\` with default props 1`] = `
<c-patterns-field-stub
  alarm-attributes="[object Object],[object Object],[object Object]"
  alarm-excluded-attributes="v.last_update_date,v.last_event_date"
  name="config"
  value="[object Object]"
  with-alarm="with-alarm"
  with-entity="with-entity"
  with-event="with-event"
/>
`;
